welcome.lessons.welcome.methods.slug.SlugTracking.scala.error
SlugTracking:6: error: value update is not a member of java.awt.Color
	getCouleurSol()=Color.green	
        ^SlugTracking:7: error: reassignment to val
	if (getCouleurSol=true)
                         ^SlugTracking:11: error: type mismatch;
 found   : java.awt.Color
 required: Boolean
		return Color.green;
                             ^SlugTracking:7: error: type mismatch;
 found   : Unit
 required: Boolean
	if (getCouleurSol=true)
        ^SlugTracking:4: error: type mismatch;
 found   : Unit
 required: Boolean
	if (!estFaceMur) {
        ^