welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = {
	
	if (!estFaceMur) {
		avance() ;
	getCouleurSol()=Color.green	
	if (getCouleurSol=true)
	
	
	
		return Color.green;

}
}        
